# sbr

./: .gitattributes  .gitignore  .readthdocs.yaml  README.md  evaluate.py  fit.py  layers.py  pyproject.toml  sbr_env.yml  visualize.py
.github/workflows/: pytest.yaml
datasets/structured/: gtex.py
docs/: conf.py  environment.yml  requirements.txt
preprocessing/: gtex.py
src/: Pipfile  pytest.ini
src/sbr/: .readthdocs.yml  compile.py  evaluate.py  fit.py  model.py  setup.py
src/sbr/datasets/structured/: gtex.py
src/sbr/docs/: environment.yaml  environment.yml  index.rst  requirements.txt
src/sbr/preprocessing/: dataset.py  gtex.py
src/tests/: monkey_patch.py  test_gtex.py  test_load.py
src/tests/expected/: compare_predictions.json  compile.txt  pred.json
