[project]
name = "sbr"
version = "0.0.1"
authors = [
  { name="Kimberly Robasky", email="kimberly.robasky@gmail.com" },
]
description = "Tools to support machine learning on public biomolecular datasets"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.9.13"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GPL-3.0-only License",
    "Operating System :: OS Independent",
]

[project.urls]
"documentation" = "https://sbr.readthedocs.io/en/latest/index.html"
"homepage" = "https://saboredge.com"
"repository" = "https://github.com/saboredge/sbr"
"Bug Tracker" = "https://github.com/saboredge/sbr/issues"
